# grpc-gw

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/grpc-gw/: Cargo.toml
crates/grpc-gw-tests/: Cargo.toml  build.rs
crates/grpc-gw-tests/examples/: cohosting.rs
crates/grpc-gw-tests/proto/: greeter.proto
crates/grpc-gw-tests/src/: backend.rs  lib.rs
crates/grpc-gw-tests/tests/: binding.rs  cohosting.rs  cohosting_inprocess.rs  cohosting_socket.rs  cohosting_tls_front.rs  gateway_unary.rs  proxy_unary.rs  spike_http_rule.rs  transcode.rs
crates/grpc-gw-tests/tests/common/: mod.rs
crates/grpc-gw-util/: Cargo.toml
crates/grpc-gw-util/src/: lib.rs
crates/grpc-gw/src/: descriptor.rs  gateway.rs  lib.rs  proxy.rs  routes.rs  status.rs  template.rs  transcode.rs
crates/grpc-gw/tests/: gateway_unary.rs  proxy_unary.rs  spike_http_rule.rs
crates/grpc-gw/tests/fixtures/: greeter.pb
docs/design/: co-hosting-with-tonic.md  grpc-gateway-design.md  m1-scope.md  m2-path-templates.md  openapi-generation.md
fixtures/proto/: greeter.proto
fixtures/proto/google/api/: annotations.proto  http.proto
