[workspace]
resolver = "2"
members = ["crates/grpc-gw"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/youyuanwu/grpc-gw"
rust-version = "1.82"

[workspace.dependencies]
prost = "0.14"
prost-reflect = { version = "0.16", features = ["serde"] }
prost-types = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
