[workspace]
resolver = "2"
members = ["crates/grpc-gw"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/youyuanwu/grpc-gw"
rust-version = "1.82"

[workspace.dependencies]
prost = "0.14"
prost-reflect = { version = "0.16", features = ["serde"] }
prost-types = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
bytes = "1"
http = "1"
http-body-util = "0.1"
hyper = "1"
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http2", "tokio"] }
tokio = { version = "1", features = ["rt", "net", "io-util"] }
