[workspace]
resolver = "2"
members = ["crates/grpc-gw", "crates/grpc-gw-tests"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/youyuanwu/grpc-gw"
rust-version = "1.90"

[workspace.dependencies]
prost = "0.14"
prost-reflect = { version = "0.16", features = ["serde"] }
prost-types = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
bytes = "1"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "server-auto", "service", "tokio"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util", "time"] }
# Client transport only: `channel` pulls the hyper-util client + tower balance,
# not the server/router (which `transport` would add).
tonic = { version = "0.14", default-features = false, features = ["channel"] }
