[package]
name = "grpc-gw"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Dynamic gRPC↔JSON transcoding reverse proxy in the spirit of grpc-gateway"

[lib]
name = "grpc_gw"
path = "src/lib.rs"

[[bin]]
name = "grpc-gw"
path = "src/bin/grpc-gw.rs"

[dependencies]
prost.workspace = true
prost-reflect.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
